--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="backImg">
         <div class="profile">
-            <img src="../Css Site/img/jaymark.jpg">
+            <img src="img/jaymark.jpg">
             <div class="profileText">
                  <h1 id="name">Jay Mark</h1>
                  <h3> an Information Technology Student</h3>
@@ -24,10 +24,10 @@
 
     <div class="skills">
         <h1 id="skill">My Skills</h1>
-        <img src="../Css Site/img/windows_client-48.png" id="browser">
+        <img src="img/windows_client-48.png" id="browser">
         <h2>Graphic Designer</h2>
         <p> I have basic knowlegde in web development and some idea about editing pictures.</p>
-        <img src="../Css Site/img/pokeball-48.png" id="pokemon">
+        <img src="img/pokeball-48.png" id="pokemon">
         <h2>Playing Online Games</h2>
         <p> I made my day more interesting everytime i play Online Games</p>
     </div>
